--- a/rsrc/email/postcard/message.html
+++ b/rsrc/email/postcard/message.html
@@ -7,9 +7,15 @@
 <!--
 body {
   color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
 }
 a {
   color: #3cb5f6;
+}
+img {
+  border: 1px solid #000000;
+  padding: 5px;
+  margin: 5px;
 }
 -->
 </style>
@@ -17,16 +23,19 @@ a {
 </head>
 <body bgcolor="#FFFFFF">
 
-<center>
-<!-- TODO: fancy postcard border -->
-<img src="${snap_url}"><br/>
-#if (${caption})
-<p>"${caption}"</p>
-#end
-</center>
+You got a Whirled Postcard from <a href="${server_url}#people-${sender_id}">${sender}</a>:
 
 <br/><br/>
-This email was sent by ${sender_email} from <a href="http://whirled.com/">http://whirled.com/</a>.
+<table cellpadding="0" cellspacing="5">
+<tr><td align="center"><a href="${server_url}#world-s${scene_id}">${title}</a><br/>
+<!-- TODO: fancy postcard border -->
+<img src="${snap_url}"></td></tr>
+#if (${caption})
+<tr><td align="center">"${caption}"</td></tr>
+#end
+</table>
+
+<p>This email was sent by ${sender_email} from <a href="${server_url}">${server_url}</a>.</p>
 
 </body>
 </html>
