Allow sending a full snapshot as a postcard.

--- a/rsrc/email/postcard/message.html
+++ b/rsrc/email/postcard/message.html
@@ -29,7 +29,7 @@ You got a Whirled Postcard from <a href="${server_url}#people-${sender_id}">${se
 <table cellpadding="0" cellspacing="5">
 <tr><td align="center"><a href="${server_url}#world-s${scene_id}">${title}</a><br/>
 <!-- TODO: fancy postcard border -->
-<img src="${snap_url}"></td></tr>
+<img src="${snap_url}" style="max-width: 800px"></td></tr>
 #if (${caption})
 <tr><td align="center">"${caption}"</td></tr>
 #end
